portfolio-test/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-napskytech
  namespace: default
  labels:
    app: test-napskytech
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-napskytech
  template:
    metadata:
      labels:
        app: test-napskytech
    spec:
      containers:
        - name: test-napskytech
          image: ghcr.io/naffsisky/portfolio:latest  # ganti ini
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 30
