portfolio-test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-napskytech-svc
  namespace: default
spec:
  selector:
    app: test-napskytech
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
